--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,14 @@
   "name": "del-ad",
   "author": "xcloche",
   "description": "検索広告等を非表示にします",
-  "version": "1.1.0",
-  "manifest_version": 2,
-  "web_accessible_resources": ["*"],
+  "version": "1.1.1",
+  "manifest_version": 3,
+  "web_accessible_resources": [
+    {
+      "resources": ["*"],
+      "matches": ["<all_urls>"]
+    }
+  ],
   "permissions": ["storage"],
   "content_scripts": [
     {
