--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "del-ad",
   "author": "xcloche",
   "description": "検索広告等を非表示にします",
-  "version": "1.1.2",
+  "version": "1.2.1",
   "manifest_version": 3,
   "web_accessible_resources": [
     {
@@ -19,6 +19,10 @@
     {
       "matches": ["https://www.amazon.co.jp/*"],
       "css": ["filter/amazon_style.css"]
+    },
+    {
+      "matches": ["https://mail.google.com/*"],
+      "css": ["filter/gmail_style.css"]
     }
   ]
 }
